--- a/.ci-operator.yaml
+++ b/.ci-operator.yaml
@@ -9,3 +9,10 @@ build_root_image:
   name: release
   namespace: openshift
   tag: golang-1.21
+
+
+
+  build_root_image:
+  name: release
+  namespace: openshift
+  tag: golang-1.21
